# my-pocs

./: README.md
3dgraphics/: 3dgraphics.cpp  CMakeLists.txt  dependencies.xenoide  gouraud.frag  gouraud.vert  package.xenoide
3dgraphics/glad/: CMakeLists.txt
3dgraphics/glad/include/glad/: glad.h
3dgraphics/glad/src/: glad.c
MyApplication-cpp-android/app/: build.gradle
MyApplication-cpp-android/app/src/main/: AndroidManifest.xml
MyApplication-cpp-android/app/src/main/assets/: shader.frag  shader.vert
MyApplication-cpp-android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
MyApplication-cpp-android/app/src/main/java/com/example/myapplication/: MainActivity.kt  NativeGameLogic.java  RendererWrapper.kt
MyApplication-cpp-android/gradle/wrapper/: gradle-wrapper.properties
atarixe/: README.md
atarixe/hello-world/: .gitignore  Makefile  main.c  run.sh
cpp-osg/: CMakeLists.txt  main.cpp
cpp-simple-neuralnet/: cpp-simple-neuralnet.sln  cpp-simple-neuralnet.vcxproj  main.cpp
cpp-wxTestApp/: CMakeLists.txt  main.cpp
cpp/multiprocess/: README.md
nvhpc-cpp/: README.md  program  program.cpp
sdl2-helloworld/: CMakeLists.txt  main.cpp
vulkan-practices/: CMakeLists.txt  Main.cpp
